--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="public\assets\images\favicon.ico"
-    />
+    <link rel="icon" type="image/svg+xml" href="assets\images\favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Koinx: Trusted Crypto Tax Software and Portfolio Tracker</title>
   </head>
